@@ -22,7 +22,6 @@
 #include "array.h"
 
 extern int  svr_authorize_req(struct batch_request *preq, char *owner, char *submit_host);
-extern void job_purge(job *pjob);
 
 extern struct work_task *apply_job_delete_nanny(struct job *, int);
 extern int has_job_delete_nanny(struct job *);
